# Copyright 2023 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@pip_deps//:requirements.bzl", "requirement")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "testdata_proto",
    srcs = ["testdata.proto"],
    features = ["disable_pbh"],
)

cc_proto_library(
    name = "testdata_cc_proto",
    deps = [":testdata_proto"],
)

py_proto_library(
    name = "testdata_py_pb2",
    # Bazel: This rule is not supported natively (yet). There is a custom
    # Starlark macro supplied by the Bazel team (loaded from `protobuf.bzl` file
    # above). See
    #   https://thethoughtfulkoala.com/posts/2020/05/08/py-protobuf-bazel.html
    srcs = ["testdata.proto"],
)

# Helper for serializing and deserializing textproto test data.
cc_library(
    name = "testdata",
    srcs = ["testdata.cc"],
    hdrs = ["testdata.h"],
    deps = [
        ":testdata_cc_proto",
        "//nisaba/port:file",
        "//nisaba/port:proto_file_stream",
        "//nisaba/port:status_macros",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@org_openfst//:base",
    ],
)

# Tests testdata for correctness w.r.t. to grammars.
cc_library(
    name = "test_textproto_lib",
    testonly = 1,
    srcs = ["test_textproto.cc"],
    deps = [
        ":testdata",
        "@org_openfst//:fstscript_compile",
        "//nisaba/port:status-matchers",
        "@com_google_googletest//:gtest",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/flags:flag",
        "@org_openfst//:base",
        "@com_google_absl//absl/strings",
        "//nisaba/interim/grm2/rewrite:rule_cascade",
        "@com_google_absl//absl/flags:parse",
    ],
    # We use alwayslink = 1 in order to allow our tests to be
    # marked as linkstatic = 1. This allows us to decrease the
    # amount of test time spent on TAP.
    alwayslink = 1,
)

# Use this if you want to actually run this test from a sh_test.
cc_binary(
    name = "test_textproto",
    testonly = 1,
    linkstatic = 1,
    deps = [
        ":test_textproto_lib",
        "//nisaba/port:status-matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

exports_files(["build_defs.bzl"])

bzl_library(
    name = "build_defs",
    srcs = ["build_defs.bzl"],
)
